@@ -210,6 +210,7 @@ namespace Config
             model->render_weather_gloom = reader->GetBoolean("render_weather_gloom", true);
             model->show_guest_purchases = reader->GetBoolean("show_guest_purchases", false);
             model->show_real_names_of_guests = reader->GetBoolean("show_real_names_of_guests", true);
+            model->allow_early_completion = reader->GetBoolean("allow_early_completion", false);
         }
     }
 
@@ -281,6 +282,7 @@ namespace Config
         writer->WriteBoolean("show_guest_purchases", model->show_guest_purchases);
         writer->WriteBoolean("show_real_names_of_guests", model->show_real_names_of_guests);
         writer->WriteBoolean("use_virtual_floor", model->use_virtual_floor);
+        writer->WriteBoolean("allow_early_completion", model->allow_early_completion);
     }
 
     static void ReadInterface(IIniReader * reader)
