@@ -88,6 +88,7 @@ struct GeneralConfiguration
     bool        scenario_hide_mega_park;
     bool        steam_overlay_pause;
     bool        show_real_names_of_guests;
+    bool        allow_early_completion;
 
     bool        confirmation_prompt;
     sint32      load_save_sort;
